Add snapshot revert action

--- a/actions/vm_snapshot_create.yaml
+++ b/actions/vm_snapshot_create.yaml
@@ -20,8 +20,25 @@
       description: VM Name to get the containing folder for
       required: true
       position: 2
+    snapshot_description:
+      type: string
+      description: VM Name to get the containing folder for
+      required: false
+      position: 3
+    snapshot_virtual_machine_memory:
+      type: boolean
+      description: Whether to snapshot the virtual machine's memory
+      required: false
+      position: 4
+      default: false
+    quiesce_file_system:
+      type: boolean
+      description: Whether to quiesce the virtual machine's file system
+      required: false
+      position: 5
+      default: false
     vsphere:
       type: string
       description: Pre-configured vsphere endpoint
       required: false
-      position: 3
+      position: 6
